--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-particles": "^2.12.2",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-engine": "^2.12.0",
