--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js site to Pages
+name: Deploy to pages
 
 on:
   push:
@@ -39,8 +39,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('bun.lockb') }}-
       
+      - name: Create .env file
+        run: |
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
+          echo "UPLOADTHING_TOKEN=${{ secrets.UPLOADTHING_TOKEN }}" >> .env
+      
       - name: Install dependencies
         run: bun install --frozen-lockfile
+      
+      - name: Generate Prisma Client
+        run: bun prisma generate
+      
+      - name: Run Prisma Migrations
+        run: bun prisma migrate deploy
       
       - name: Build with Next.js
         run: bun next build
