--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.67.2",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@uploadthing/react": "^7.3.0",
     "@vercel/blob": "^0.27.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +45,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-engine": "^2.12.0",
     "tsparticles-slim": "^2.12.0",
+    "uploadthing": "^7.5.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
